--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -2,15 +2,28 @@
 
 {% block head_title %}Courses | {{ block.super }}{% endblock head_title %}
 {% block content %}
+<ol class='breadcrumb'>
+	<li><a href="{% url 'home' %}">Home</a></li> /
+	<li>{{ object.title }}</li>
+</ol>
 <div class='row'>
 	<div class='col-12 col-md-6 mx-auto'>
 		<li class='lead'>{{ object.title }} | {{ object.timestamp }}</li>
-		{{ object.description }}
+		<img src="{{ object.image.url }}" class="img-fluid my-3" >
+		<p>{{ object.description }}</p>
 		<hr/>
+	</div>
+</div>
+<div class='row'>
+	<div class='col-12 col-md-6 mx-auto'>
 		{% for l in object.lecture_set.all %}
-		<p>{{ l.order }}<a href='{{ l.get_absolute_url }}'>{{ l.title }}</a></p>
+		<div class="list-group">
+  			<a href='{{ l.get_absolute_url }}' class="list-group-item list-group-item-action lead" disabled='disabled'>
+    			{{ l.title }} <small>{% if l.free %}| Free Preview{% endif %}</small>
+ 			</a>
+		</div>
 		{% empty %}
-		<P>No Lectures Found.</P>
+		<p class='lead'>Lecture is coming soon.</p>
 		{% endfor %}
 	</div>
 </div>
