--- a/templates/defaults/base.html
+++ b/templates/defaults/base.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class='container'>
+        {% include 'defaults/navbar.html' %}
+      
       {% block content %}
       {% endblock content %}
     </div>
