--- a/templates/defaults/css.html
+++ b/templates/defaults/css.html
@@ -2,3 +2,4 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/comments.css' %}">
